--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,6 +1,14 @@
 - class_name: 友情链接
   class_desc: 那些人，那些事
   link_list:
+    - name: ggaaooppeenngg
+      link: https://ggaaooppeenngg.github.io/
+      avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
+      descr: AI Infra技术大佬的博客
+    - name: 手抓饼熊
+      link: https://www.zhihu.com/people/tongsanpang/posts
+      avatar: https://static.zhihu.com/heifetz/assets/apple-touch-icon-152.81060cab.png
+      descr: vLLM源码解读，AI Infra技术大佬的知乎
     - name: Hexo
       link: https://hexo.io/zh-tw/
       avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
